[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/textures/Slime_dude_idle.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/ui_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/global/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://scenes/objects/Slime/Slime.gd" type="Script" id=4]
[ext_resource path="res://scenes/objects/Slime/ATTACK.gd" type="Script" id=5]
[ext_resource path="res://scenes/objects/Slime/TARGET.gd" type="Script" id=6]
[ext_resource path="res://scenes/objects/Slime/IDLE.gd" type="Script" id=7]

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
spread = 87.35
gravity = Vector3( 0, 10, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color = Color( 0.109804, 0.4, 0, 1 )

[sub_resource type="Animation" id=1]
resource_name = "dmg"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( -5, 0 ), Vector2( 5, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../Slime/SurprisePopup:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.06, 0.13, 0.21, 0.28, 0.36, 0.89 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
custom_solver_bias = 0.014
radius = 5.77278
height = 2.64816

[sub_resource type="CircleShape2D" id=12]
radius = 100.0

[node name="Slime" type="KinematicBody2D"]
position = Vector2( -3.72315e-05, 10.8528 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )
hp = 4
max_hp = 4
detect_dist = null

[node name="debug" type="Node2D" parent="."]
visible = false

[node name="move_to" type="Polygon2D" parent="debug"]
z_index = 10
polygon = PoolVector2Array( -2, -2, -3, 0, -2, 2, 0, 3, 2, 2, 3, 0, 2, -2, 0, -3 )

[node name="Splat" type="Particles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
speed_scale = 3.0
process_material = SubResource( 13 )

[node name="SurprisePopup" type="RichTextLabel" parent="."]
visible = false
margin_left = -5.0
margin_top = -29.0
margin_right = 10.0
margin_bottom = -14.0
custom_fonts/normal_font = ExtResource( 2 )
text = "!!!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dmg = SubResource( 1 )
anims/suprise_anim = SubResource( 2 )

[node name="Center" type="Position2D" parent="."]
position = Vector2( 0, -5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.146782, -6.01788 )
frames = SubResource( 10 )
frame = 4
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -5 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="DetectArea" type="Area2D" parent="."]
position = Vector2( 0, -5 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="DetectArea"]
visible = false
position = Vector2( 0.280621, -0.561234 )
shape = SubResource( 12 )

[node name="SM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="IDLE" type="Node" parent="SM"]
script = ExtResource( 7 )

[node name="TARGET" type="Node" parent="SM"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="SM/TARGET"]

[node name="ATTACK" type="Node" parent="SM"]
script = ExtResource( 5 )

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="timeout" from="SM/TARGET/Timer" to="SM/TARGET" method="_on_Timer_timeout"]
